--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
 
     <script>
-        var audio = new Audio('audio_file.mp3');
-audio.play();
-        function play() {
-  var audio = new Audio('https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3');
-  audio.play();
+//         var audio = new Audio('audio_file.mp3');
+// audio.play();
+//         function play() {
+//   var audio = new Audio('https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3');
+//   audio.play();
 }
     </script>
          
